# 2019

./: .gitmodules  Action.java  B16-AI_Drone  Base64.java  C-12README  Content.java  DiscussList.java  Dynamic.java  DynamicList.java  HttpRetriever.java  LocationMAP.java  MainActivity.java  MapView3.java  MyAdapter.java  README  README.md  SplashActivity.java  UserAdapter.java  locationDetection.java
A01/: README  coffee.c  維也納咖啡.docx
A04/: README
A05/: README.md  youtube影片.txt
A05-傳奇射手/: README  README.md  傳奇射手報告書.docx
B08/: README  pixhawk2_autopilot.py  無人機應用-畢業專題競賽成果報告書.docx
B08/imshow/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  plane_detection.cpp  plane_detection.h  rs-imshow.cpp
B08/imshow/backup/: plane_detection-1.cpp  plane_detection-1.h  plane_detection-2.cpp  rs-imshow-1.cpp  rs-imshow-2.cpp  rs-imshow-3.cpp  rs-imshow-backup.cpp
B08/imshow/include/MRF2.2/: example
B09/: AIFB_LEDxBlynk.ino  AIFB_main.ino  AIFB_uno.ino  README
B10/: README  coffeeLA.ev3
B11/: B11-以YOLO影像辨識及機械手臂應用於產品分類.docx  B11-以YOLO影像辨識及機械手臂應用於產品分類。程式碼.py  README  server
B12/: README  work.ev3
B13/: B13_YoutubeLink.txt  LOGO(彩色).ai  README  README.md
B16_AI-Drone/: README  flightGUI.m  flightTest.m  mission_2019.10.m  net_Test.m  net_TestByDrone.m  net_TestByVideo.m  takephoto.m  vgg19.m
B17-變臉變臉BangBangBang/: B17-變臉變臉BangBangBang專題摘要.docx  README
B18-臉部辨識/: README.md  youtube_link.txt.txt
B19/: README  創意樂高成果報告書.docx
C08-GPS提醒鬧鈴/: C08-GPS提醒鬧鈴-成果報告書.docx  README
C09/: QRFood_摘要_畢業專題展.docx  README.md
C13/: README  (+1 more)
(+260 files in other folders)
